# rust_os

./: .gitignore  Cargo.toml  Readme.md  config.dm  config.md  test.md  text.md
refs/: build.md  debugging_tips.md  deploy.md  doubleFlt.md  heap.md  image.md  interupt.md  lifetimes.md  memory.md  naked.md  qume.md  refactor_debug_rust.md  repr.md  spin.md  test.md  text.md
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_text_buffer.rs
src/allocator/: bump.rs  linked_list.rs
src/task/: keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs  test_skeleton.txt
