[package]
name = "rust_os"
version = "0.1.0"
edition = "2021"

[dependencies] # 0.9.8
bootloader = { version = "0.9.22", features = ["map_physical_memory"]}
linked_list_allocator = "0.9.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
volatile = "=0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", 
    "-serial", "stdio",         #" redirect output to stdout"
     "-display", "none"]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 5         # (in seconds)

#  To make it no_std compatible, 
# we need to disable its default features and instead enable the alloc feature.
[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[[test]]
name = "stack_overflow"
harness = false

[[test]]
name = "should_panic"
harness = false